# python_course_23

./: README.md
1_basics/: 10_debug.ipynb  1_types.ipynb  2_strings.ipynb  3_list_container.ipynb  4_tuple_container.ipynb  5_set_container.ipynb  6_dictionary_container.ipynb  7_condition_and_loops.ipynb  8_functions.ipynb  9_scope_and_namespace.ipynb  README.md
2_oop/: 1_oop.ipynb  2_classes_and_objects.ipynb  3_class_methods.ipynb  4_inheritance.ipynb  5_abstract.ipynb  6_data_class.ipynb  7_exceptions.ipynb  8_special_methods.ipynb  9_context_manager.ipynb  readme.md
3_advanced/: 1_comprehensions.ipynb  2_func_programming.ipynb  3_closure.ipynb  4_lambda_map_reduce.ipynb  5_containers.ipynb  6_itertools.ipynb  7_decorator.ipynb  8_generators.ipynb  readme.md
4_performance/: 1_typying.ipynb  2_pydantic.ipynb  README.md  pre-commit-config.yaml
5_pet_store/: README.md  pet_store.db  pyproject.toml
5_pet_store/src/pet_store/: db.py  main.py  model.py  schemas.py  services.py
6_testing/: README.md  dev.txt  pyproject.toml  pytest.ini  requirements.txt  swagger.yaml
6_testing/src/: core.py  wallet.py
6_testing/src/db_code/: core.py  models.py
6_testing/src/pet_store/: main.py
6_testing/tests/: conftest.py
6_testing/tests/api/: test_pet_store.py  test_swagger.py  test_swagger_with_class.py
6_testing/tests/db_code/: test_logic.py
6_testing/tests/src/: test_logic.py
6_testing/tests/unit/: conftest.py  test_file_explorer.py  test_wallet.py  test_wallet_using_conftest.py  test_wallet_with_fixture.py
session1/: 1_scope_and_namespace.ipynb  README.md  (+1 more)
(+35 files in other folders)
